hydro_lang/tests/compile-fail-stable/monotone_map.stderr
error[E0277]: The input singleton must be monotonic (`Monotonic`) or bounded (`Bounded`), but has bound `hydro_lang::prelude::Unbounded`. Strengthen the monotonicity upstream or consider a different API.
  --> tests/compile-fail-stable/monotone_map.rs:18:13
   |
18 |     let _ = no_longer_monotone.threshold_greater_or_equal(p1.singleton(q!(0)));
   |             ^^^^^^^^^^^^^^^^^^ required here
   |
   = help: the trait `IsMonotonic` is not implemented for `hydro_lang::prelude::Unbounded`
   = note: To intentionally process a non-deterministic snapshot or batch, you may want to use a `sliced!` region. This introduces non-determinism so avoid unless necessary.
note: required by a bound in `hydro_lang::prelude::Singleton::<T, L, B>::threshold_greater_or_equal`
  --> src/live_collections/singleton.rs
   |
   |     pub fn threshold_greater_or_equal<B2: IsBounded>(
   |            -------------------------- required by a bound in this associated function
...
   |         B: IsMonotonic,
   |            ^^^^^^^^^^^ required by this bound in `Singleton::<T, L, B>::threshold_greater_or_equal`

error[E0308]: mismatched types
  --> tests/compile-fail-stable/monotone_map.rs:35:54
   |
35 |     let _: KeyedSingleton<_, _, _, MonotonicValue> = is_monotone.map(q!(|x| -x));
   |            ---------------------------------------   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `KeyedSingleton<_, _, _, MonotonicValue>`, found `KeyedSingleton<{integer}, {integer}, ..., ...>`
   |            |
   |            expected due to this
   |
   = note: expected struct `hydro_lang::prelude::KeyedSingleton<_, _, _, hydro_lang::live_collections::keyed_singleton::MonotonicValue>`
              found struct `hydro_lang::prelude::KeyedSingleton<{integer}, {integer}, hydro_lang::prelude::Process<'a, P1>, hydro_lang::prelude::Unbounded>`
